--- a/webclient/pages/index.html
+++ b/webclient/pages/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" type="text/css" href="/webclient/static/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
 </head>
-<body>
-    Hello
+<body style="body">
+    <form action="http://localhost:6702/command" method="post">
+        <input type="text"/>
+        <input type="submit"/>
+    </form>
 </body>
 </html>
